--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,7 @@
     border-color: black;
     display: inline-block;
     text-align: center;
+    position: relative;
 }
 #id_file{
     display: inline-block;
@@ -22,7 +23,7 @@
     display: inline-block;
 }
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -59,7 +60,7 @@
   }
   
   .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: gray;
   }
  
   
