--- a/uploadform/templates/upload_form.html
+++ b/uploadform/templates/upload_form.html
@@ -52,19 +52,19 @@
     <input class="form-check-input" type="radio" name="folder_to_user" id="folder_to_user" value="folder_to_user" checked disabled>
     <label class="form-check-label" for="">
       Folder to User
-    </label> {{form.folder_to_user }}
+    </label> 
   </div>
   <div class="form-check">
     <input class="form-check-input" type="radio" name="folder_to_group" id="folder_to_group" value="folder_to_group">
     <label class="form-check-label" for="">
       Folder to Group
-    </label> {{form.folder_to_group }}
+    </label> 
   </div>
   <div class="form-check">
     <input class="form-check-input" type="radio" name="group_to_user" id="group_to_user" value="group_to_user">
     <label class="form-check-label" for="exampleRadios2">
       Group to User
-    </label>{{form.group_to_user}}
+    </label>
   </div>
   </div>
 </div>
