--- a/uploadform/templates/upload_form.html
+++ b/uploadform/templates/upload_form.html
@@ -25,13 +25,13 @@
 <form id="form" method="post" enctype="multipart/form-data">{% csrf_token %}
   <div class="form-group">
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" name="basic" value="" id="basic-report" checked>
+    <input class="form-check-input" type="radio" name="report_type" value="basic" id="basic-report" checked>
     <label class="form-check-label" for="defaultCheck1">
       Basic
     </label> 
   </div>
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" name="pivot" value="" id="pivot-report" >
+    <input class="form-check-input" type="radio" name="report_type" value="pivot" id="pivot-report" >
     <label class="form-check-label" for="defaultCheck2">
       Pivot
     </label>
@@ -47,27 +47,9 @@
   </div>
   <!--Permission-->
   <div id="pivot-input" style="display: none;">
-    <div class="form-group">
-  <div class="form-check disabled">
-    <input class="form-check-input" type="radio" name="folder_to_user" id="folder_to_user" value="folder_to_user" checked disabled>
-    <label class="form-check-label" for="">
-      Folder to User
-    </label> 
+    <div class="form-group"> {{form.permission}}</div>
   </div>
-  <div class="form-check">
-    <input class="form-check-input" type="radio" name="folder_to_group" id="folder_to_group" value="folder_to_group">
-    <label class="form-check-label" for="">
-      Folder to Group
-    </label> 
-  </div>
-  <div class="form-check">
-    <input class="form-check-input" type="radio" name="group_to_user" id="group_to_user" value="group_to_user">
-    <label class="form-check-label" for="exampleRadios2">
-      Group to User
-    </label>
-  </div>
-  </div>
-</div>
+  
   <div class="form-group">
     <label for="">Example file input</label>
     {{form.file}}
