--- a/uploadform/templates/base.html
+++ b/uploadform/templates/base.html
@@ -1,4 +1,7 @@
+{% load progress_bar %}
+
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -13,7 +16,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    
 
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        {% progress_bar_media %}
 
     </head>
     <body>
