--- a/uploadform/templates/upload_form.html
+++ b/uploadform/templates/upload_form.html
@@ -20,43 +20,50 @@
       {%endif%}
     </div> 
   </div>
-
-<div class="content">
-<form id="form" method="post" enctype="multipart/form-data">{% csrf_token %}
-  <div class="form-group">
-  <div class="form-check">
-    <input class="form-check-input" type="radio" name="report_type" value="basic" id="basic-report" checked>
-    <label class="form-check-label" for="defaultCheck1">
-      Basic
-    </label> 
-  </div>
-  <div class="form-check">
-    <input class="form-check-input" type="radio" name="report_type" value="pivot" id="pivot-report" >
-    <label class="form-check-label" for="defaultCheck2">
-      Pivot
-    </label>
-  </div>
-</div>
+  <!--Report type-->
+  <div class="content">
+    <form id="form" method="post" enctype="multipart/form-data">{% csrf_token %}
+      <div class="form-group">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="report_type" value="basic" id="basic-report" checked>
+          <label class="form-check-label" for="defaultCheck1">Basic
+          </label> 
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="report_type" value="pivot" id="pivot-report" >
+          <label class="form-check-label" for="defaultCheck2">Pivot
+          </label>
+        </div>
+      </div>
   <!--Owner-->
-  <div id="basic-input">
-    <div class="form-group" >
-      <label for="{{form.owner.id_for_label}}">Owner Name</label>
-      {{form.owner}}
-  </div>
+      <div id="basic-input">
+        <div class="form-group" >
+          <label for="{{form.owner.id_for_label}}">Owner Name</label> {{form.owner}}
+        </div>
+       </div>
 
-  </div>
   <!--Permission-->
-  <div id="pivot-input" style="display: none;">
-    <div class="form-group"> {{form.permission}}</div>
-  </div>
+      <div id="pivot-input" style="display: none;">
+        <div class="form-group"> {{form.permission}}</div>
+       </div>
+
+      <div class="form-group">
+        <label for="">Example file input</label> {{form.file}}
+      </div>
+  </div>  
+  {% progress_bar %}
+
+  <input class="btn btn-primary" id="button-submit" type="submit" value="Submit"> 
+  <!--Output-->
+
+
   
-  <div class="form-group">
-    <label for="">Example file input</label>
-    {{form.file}}
-  </div>
-  <input class="btn btn-primary" type="submit" value="Submit"></div>   
+
 </form>
-<script src="{% static 'js/upload_form.js' %}"></script>
+  {% block script %}
+    <script src="{% static 'js/upload_form.js' %}"></script>
+  {% endblock %}
+
 
 {% endblock %}
 
