--- a/uploadform/templates/upload_form.html
+++ b/uploadform/templates/upload_form.html
@@ -44,22 +44,31 @@
 
   <!--Permission-->
       <div id="pivot-input" style="display: none;">
-        <div class="form-group"> {{form.permission}}</div>
-       </div>
-
+      <div class="form-group">
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" name="folder_to_user" value="folder_to_user" checked disabled>
+        <label class="form-check-label" for="">Folder to User</label>
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" name="folder_to_group" value="folder_to_group">
+        <label class="form-check-label" for="">Folder to Group</label>
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" name="group_to_user" value="group_to_user">
+        <label class="form-check-label" for="">Group to User</label>
+      </div>
+      </div>
+    </div>
       <div class="form-group">
         <label for="">Example file input</label> {{form.file}}
       </div>
+    <input class="btn btn-primary" id="button-submit" type="submit" value="Submit"> 
   </div>  
-  {% progress_bar %}
-
-  <input class="btn btn-primary" id="button-submit" type="submit" value="Submit"> 
-  <!--Output-->
-
-
-  
-
 </form>
+  <!--Output-->
+  {% if url %}
+    <p>Uploaded file: <a href="{{url}}"></a></p>
+  {%endif%}
   {% block script %}
     <script src="{% static 'js/upload_form.js' %}"></script>
   {% endblock %}
