--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,9 @@
     margin-bottom: 20px;
 
 }
+p{
+  margin: 0;
+}
 ul{
   text-align: left;
 }
@@ -12,6 +15,7 @@ ul{
     display: inline-block;
 }
 .form-group{
+    width: 500px;
     margin: 1rem;
     padding: 10px;
     border-style: solid;
