--- a/uploadform/templates/upload_form.html
+++ b/uploadform/templates/upload_form.html
@@ -3,10 +3,8 @@
 
 {% block content %}
 
-{% block javascript %}
 
 
-{% endblock %}
   <div class="navbar">
     <div class="dropdown">
       {% if user.is_authenticated%}
@@ -15,14 +13,15 @@
       </button>
       <div class="dropdown-content">
         <a href="#">Basic report image</a>
-        <a href="./registration/logged_out.html">Logout</a>
+        <a href="/templates/registration/logged_out.html">Logout</a>
       </div>
       {%endif%}
     </div> 
+
   </div>
-  <!--Report type-->
+  <!--REPORT TYPE-->
   <div class="content">
-    <form id="form" method="post" enctype="multipart/form-data">{% csrf_token %}
+    <form id="form" method="post" enctype="multipart/form-data" action="">{% csrf_token %}
       <div class="form-group">
         <div class="form-check">
           <input class="form-check-input" type="radio" name="report_type" value="basic" id="basic-report" checked>
@@ -35,14 +34,14 @@
           </label>
         </div>
       </div>
-  <!--Owner-->
+  <!--OWNER NAME-->
       <div id="basic-input">
         <div class="form-group" >
           <label for="{{form.owner.id_for_label}}">Owner Name</label> {{form.owner}}
         </div>
        </div>
 
-  <!--Permission-->
+  <!--PERMISSION-->
       <div id="pivot-input" style="display: none;">
       <div class="form-group">
       <div class="form-check">
@@ -59,16 +58,34 @@
       </div>
       </div>
     </div>
+    <!--FILE UPLOAD-->
+    <div class="file-upload">
       <div class="form-group">
         <label for="">Example file input</label> {{form.file}}
       </div>
-    <input class="btn btn-primary" id="button-submit" type="submit" value="Submit"> 
-  </div>  
-</form>
+    </div>
+      
+    <div class="btn">
+    
+      <input class="btn btn-primary" id="button-submit" type="submit" value="Submit"> 
+   
+    </div>
+  </form>
   <!--Output-->
-  {% if url %}
-    <p>Uploaded file: <a href="{{url}}"></a></p>
-  {%endif%}
+    <div id="output">
+    {% if url %}
+    <p>File uploaded at: <a href="{{ url }}">{{ url }}</a></p>
+    {% endif %}
+
+    <div class="ajaxProgress">
+    <h3>Please wait</h3>
+    <img src="/media/imgs/loading.gif" alt="loading"/>
+    </div>
+    </div>
+</div>  
+
+  
+
   {% block script %}
     <script src="{% static 'js/upload_form.js' %}"></script>
   {% endblock %}
